# foundernest_test

./: .gitignore  README.md  build_weekly_tables.py  database.db  docker-compose.yml  dockerfile  load_date.py  pyproject.toml  run.py
app/: __init__.py
app/database/: models.py  session_factory.py  transformation.py
app/ingestion/: data_example.json  extract.py  load.py  tester.py
results/: database.db  events_stats_corporate_users.txt  events_stats_users.txt  weekly_active_corporate_users.txt  weekly_active_users.txt
solution/: .pre-commit-config.yaml  __init__.py  config.py  data_example.json  pyproject.toml
solution/loader/: json_test.py
tests/: fetcher.py
